--- a/async-cheatsheet.html
+++ b/async-cheatsheet.html
@@ -4,7 +4,7 @@
   <link type="text/css" rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-<div class="vertical-split">
+<div class="horizontal-split">
 <div class="top">
 
 <div class="horizontal-split">
